--- a/5-third-party-apis/weather-basic.yml
+++ b/5-third-party-apis/weather-basic.yml
@@ -5,10 +5,14 @@ integrations:
     config:
       name: weather
       variable_store:
-        long: 13.41
-        lat: 52.52
+        long: 151.21
+        lat: -33.87
+			custom_attributes:
+        city: Sydney
       global: 
         base_url: https://api.open-meteo.com/v1/forecast?
       apis:
         - event_type: WeatherLocationExample
           url: latitude=${var:lat}&longitude=${var:long}&current_weather=true
+					add_attribute:
+						city: Sydney
