--- a/3-status-endpoints/status-twillio.yml
+++ b/3-status-endpoints/status-twillio.yml
@@ -4,12 +4,15 @@ integrations:
     interval: 30s
     config:
       name: status
-      global: 
+      global:
         base_url: https://status.twilio.com/api/v2
       apis:
         - event_type: TwilioStatusSample
           url: /status.json
-          # keep_keys:
-          #   - status
-        - event_type: TwilioComponentSample
-          url: /components.json
+          keep_keys:
+            - status
+          # async: true
+        
+        # - event_type: TwilioComponentSample
+        #   url: /components.json
+          # async: true
