--- a/6-command-line/linux-directory-size.yml
+++ b/6-command-line/linux-directory-size.yml
@@ -7,10 +7,8 @@ integrations:
         - name: linuxDirectorySize
           event_type: lab61
           commands:
-            - run: du -s /flexlabs /home /opt /var
+            - run: du -s /root/devrel-fhf-workshop /home /opt /var
               # split: horizontal 
-
               # regex_match: true
               # split_by: (\d+)\s+(.*)
-
               # set_header: [dirSizeBytes, dirName]
