--- a/7-database-and-secrets/basic-db.yml
+++ b/7-database-and-secrets/basic-db.yml
@@ -6,7 +6,7 @@ integrations:
       name: mysqlDbFlex
       apis:
         - database: mysql
-          event_type: lab71
+          event_type: Lab7Example1
           db_conn: weaver:weaverpass@tcp(ec2-54-206-88-205.ap-southeast-2.compute.amazonaws.com:3306)/usersdb
           custom_attributes: # applies to all queries
             weather: sunny
